--- a/odoo/scratch/addons/copro_manager/views/menus.xml
+++ b/odoo/scratch/addons/copro_manager/views/menus.xml
@@ -5,14 +5,16 @@
         <!-- Top-level menu for your module -->
         <menuitem id="menu_copro_manager_root" name="Copro Manager" sequence="10"/>
 
-        <!-- Action and Menu for Superadmins (using res.users) -->
+        <!-- Action and Menu for Superadmins using res.users ->
         <record id="action_superadmin_list" model="ir.actions.act_window">
             <field name="name">Superadmins</field>
             <field name="res_model">res.users</field>
             <field name="view_mode">list,form</field>
+            <!- Filter to only display users in the Superadmin group ->
+            <field name="domain" eval="[('groups_id','in',[ref('copro_manager.group_superadmin')])]"/>
         </record>
         <menuitem id="menu_superadmin" name="Superadmins" parent="menu_copro_manager_root" sequence="15"
-                  action="action_superadmin_list"/>
+                  action="action_superadmin_list"/>-->
 
         <!-- Action and Menu for Syndics -->
         <record id="action_syndic_list" model="ir.actions.act_window">
@@ -20,8 +22,9 @@
             <field name="res_model">copro.syndic</field>
             <field name="view_mode">list,form</field>
         </record>
+        <!-- Syndics Menu Visible Only to Superadmins -->
         <menuitem id="menu_syndic" name="Syndics" parent="menu_copro_manager_root" sequence="20"
-                  action="action_syndic_list"/>
+                  action="action_syndic_list" groups="base.group_system"/>
 
         <!-- Action and Menu for Copropriétaires -->
         <record id="action_coproprietaire_list" model="ir.actions.act_window">
@@ -48,7 +51,10 @@
             <field name="view_mode">list,form</field>
         </record>
         <menuitem id="menu_license" name="Licenses" parent="menu_copro_manager_root" sequence="35"
-                  action="action_license_list"/>
+                  action="action_license_list" groups="base.group_system"/>
+        <!-- Licenses Menu Visible Only to Superadmins -->
+        <menuitem id="menu_license" name="Licenses" parent="menu_copro_manager_root" sequence="35"
+                  action="action_license_list" groups="base.group_system"/>-->
 
         <!-- Action to and Menu for Residences -->
         <record id="action_residences_list" model="ir.actions.act_window">
