a lot of changes, thanks to Allah

--- a/odoo/odoo/addons/copro_manager/views/license_views.xml
+++ b/odoo/odoo/addons/copro_manager/views/license_views.xml
@@ -9,8 +9,9 @@
         <field name="arch" type="xml">
             <list string="Licenses">
                 <field name="name"/>
-                <field name="start_at"/>
-                <field name="end_at"/>
+                <field name="license_type"/>
+                <field name="license_start"/>
+                <field name="license_end"/>
             </list>
         </field>
     </record>
@@ -25,8 +26,9 @@
                 <sheet>
                     <group>
                         <field name="name"/>
-                        <field name="start_at"/>
-                        <field name="end_at"/>
+                        <field name="license_type" groups="base.group_system"/>
+                        <field name="license_start" groups="base.group_system"/>
+                        <field name="license_end" groups="base.group_system"/>
                     </group>
                 </sheet>
             </form>
