--- a/odoo/scratch/addons/copro_manager/views/menus.xml
+++ b/odoo/scratch/addons/copro_manager/views/menus.xml
@@ -5,46 +5,46 @@
         <!-- Top-level menu for your module -->
         <menuitem id="menu_copro_manager_root" name="Copro Manager" sequence="10"/>
 
-        <!-- Action and Menu for Superadmins using res.users ->
-        <record id="action_superadmin_list" model="ir.actions.act_window">
-            <field name="name">Superadmins</field>
+        <!-- Super Users (visible only to superusers) -->
+        <record id="action_superuser_list" model="ir.actions.act_window">
+            <field name="name">Contacts</field>
             <field name="res_model">res.users</field>
             <field name="view_mode">list,form</field>
-            <!- Filter to only display users in the Superadmin group ->
-            <field name="domain" eval="[('groups_id','in',[ref('copro_manager.group_superadmin')])]"/>
         </record>
-        <menuitem id="menu_superadmin" name="Superadmins" parent="menu_copro_manager_root" sequence="15"
-                  action="action_superadmin_list"/>-->
+        <menuitem id="menu_superuser" name="Contacts" parent="menu_copro_manager_root" sequence="15"
+                  action="action_superuser_list" groups="base.group_system"/>
 
-        <!-- Action and Menu for Syndics -->
+        <!-- Syndics menu: visible to Syndic, Copropriétaire, Prestataire, and Superuser -->
         <record id="action_syndic_list" model="ir.actions.act_window">
             <field name="name">Syndics</field>
             <field name="res_model">copro.syndic</field>
             <field name="view_mode">list,form</field>
         </record>
-        <!-- Syndics Menu Visible Only to Superadmins -->
         <menuitem id="menu_syndic" name="Syndics" parent="menu_copro_manager_root" sequence="20"
-                  action="action_syndic_list" groups="base.group_system"/>
+                  action="action_syndic_list"
+                  groups="copro_manager.group_syndic,copro_manager.group_coproprietaire,copro_manager.group_prestataire,base.group_system"/>
 
-        <!-- Action and Menu for Copropriétaires -->
+        <!-- Copropriétaires menu: visible to Copropriétaire, Prestataire, and Superuser -->
         <record id="action_coproprietaire_list" model="ir.actions.act_window">
             <field name="name">Copropriétaires</field>
             <field name="res_model">copro.coproprietaire</field>
             <field name="view_mode">list,form</field>
         </record>
         <menuitem id="menu_coproprietaire" name="Copropriétaires" parent="menu_copro_manager_root" sequence="25"
-                  action="action_coproprietaire_list"/>
+                  action="action_coproprietaire_list"
+                  groups="copro_manager.group_coproprietaire,copro_manager.group_prestataire,base.group_system"/>
 
-        <!-- Action and Menu for Prestataires -->
+        <!-- Prestataires menu: visible to Prestataire, Copropriétaire, and Superuser -->
         <record id="action_prestataire_list" model="ir.actions.act_window">
             <field name="name">Prestataires</field>
             <field name="res_model">copro.prestataire</field>
             <field name="view_mode">list,form</field>
         </record>
         <menuitem id="menu_prestataire" name="Prestataires" parent="menu_copro_manager_root" sequence="30"
-                  action="action_prestataire_list"/>
+                  action="action_prestataire_list"
+                  groups="copro_manager.group_prestataire,copro_manager.group_coproprietaire,base.group_system"/>
 
-        <!-- Action and Menu for Licenses -->
+        <!-- Licenses menu (superusers only) -->
         <record id="action_license_list" model="ir.actions.act_window">
             <field name="name">Licenses</field>
             <field name="res_model">copro.license</field>
@@ -52,20 +52,15 @@
         </record>
         <menuitem id="menu_license" name="Licenses" parent="menu_copro_manager_root" sequence="35"
                   action="action_license_list" groups="base.group_system"/>
-        <!-- Licenses Menu Visible Only to Superadmins -->
-        <menuitem id="menu_license" name="Licenses" parent="menu_copro_manager_root" sequence="35"
-                  action="action_license_list" groups="base.group_system"/>-->
 
-        <!-- Action to and Menu for Residences -->
+        <!-- Residences menu: visible to Syndic, Copropriétaire, Prestataire, and Superuser -->
         <record id="action_residences_list" model="ir.actions.act_window">
             <field name="name">Residences</field>
             <field name="res_model">copro.residence</field>
-            <!--<field name="context">{"search_default_active": 1}</field>-->
             <field name="view_mode">list,form</field>
         </record>
-
-        <!-- Menu Item to access Residences -->
-        <menuitem id="menu_residences" name="Residences" parent="menu_copro_manager_root" sequence="40" 
-                  action="action_residences_list"/>
+        <menuitem id="menu_residences" name="Residences" parent="menu_copro_manager_root" sequence="40"
+                  action="action_residences_list"
+                  groups="copro_manager.group_syndic,copro_manager.group_coproprietaire,copro_manager.group_prestataire,base.group_system"/>
     </data>
 </odoo>
