--- a/odoo/scratch/addons/copro_manager/views/syndic_views.xml
+++ b/odoo/scratch/addons/copro_manager/views/syndic_views.xml
@@ -11,6 +11,10 @@
                 <field name="name"/>
                 <field name="email"/>
                 <field name="phone"/>
+                <field name="license_id"/>
+                <field name="license_type"/>
+                <field name="license_start"/>
+                <field name="license_end"/>
             </list>
         </field>
     </record>
@@ -27,7 +31,10 @@
                         <field name="name"/>
                         <field name="email"/>
                         <field name="phone"/>
-                        <field name="license_id"/>
+                        <field name="license_id"/>  <!-- Just link to copro.license model -->
+                        <field name="license_type" groups="base.group_system"/>
+                        <field name="license_start" groups="base.group_system"/>
+                        <field name="license_end" groups="base.group_system"/>
                     </group>
                 </sheet>
             </form>
