--- a/odoo/odoo/addons/copro_manager/views/residence_views.xml
+++ b/odoo/odoo/addons/copro_manager/views/residence_views.xml
@@ -10,8 +10,11 @@
                 <search>
                     <!-- Quick search fields -->
                     <field name="name"/>
-                    <field name="syndic_ids"/>
+                    <!--<button name="archive_action" type="object" icon="fa-archive" string="Archive"/>-->
+
                     <field name="superuser_ids"/>
+                    <field name="supersyndic_ids"/>
+                    <field name="syndic_ids"/>
                     
                     <!-- Predefined filters -->
                     <filter string="Recent" 
@@ -46,8 +49,9 @@
                     <field name="number_of_apartments"/>
                     <field name="total_area"/>
                     <field name="construction_date"/>
-                    <field name="syndic_ids" widget="many2many_tags"/>
                     <field name="superuser_ids" widget="many2many_tags"/>
+                    <field name="supersyndic_ids" widget="many2many_tags"/>
+                    <field name="syndic_ids" widget="many2many_tags"/>
                     <field name="created_by" widget="many2one_avatar"/>
                     <field name="active" invisible="1"/>
                     <button name="toggle_active" 
@@ -80,8 +84,9 @@
 
                         <notebook>
                             <page string="Management">
-                                <field name="syndic_ids" widget="many2many_tags"/>
                                 <field name="superuser_ids" widget="many2many_tags"/>
+                                <field name="supersyndic_ids" widget="many2many_tags"/>
+                                <field name="syndic_ids" widget="many2many_tags"/>
                             </page>
                             
                             <page string="Address Details">
