--- a/odoo/odoo/addons/copro_manager/views/supersyndic_views.xml
+++ b/odoo/odoo/addons/copro_manager/views/supersyndic_views.xml
@@ -1,13 +1,13 @@
-<!-- /home/siisi/super/odoo/odoo/addons/copro_manager/views/syndic_views.xml -->
+<!-- /home/siisi/super/odoo/scratch/addons/copro_manager/views/supersyndic_views.xml -->
 
 <odoo>
-    <!-- List view for Syndics -->
-    <record id="view_syndic_list" model="ir.ui.view">
-        <field name="name">syndic.list</field>
-        <field name="model">copro.syndic</field>
+    <!-- List view for Supersyndics -->
+    <record id="view_supersyndic_list" model="ir.ui.view">
+        <field name="name">supersyndic.list</field>
+        <field name="model">copro.supersyndic</field>
         <field name="type">list</field>
         <field name="arch" type="xml">
-            <list string="Syndics">
+            <list string="Super Syndics">
                 <field name="name"/>
                 <field name="email"/>
                 <field name="phone"/>
@@ -15,28 +15,26 @@
                 <field name="license_type"/>
                 <field name="license_start"/>
                 <field name="license_end"/>
-                <field name="supersyndic_id"/>
             </list>
         </field>
     </record>
 
-    <!-- Form view for Syndics -->
-    <record id="view_syndic_form" model="ir.ui.view">
-        <field name="name">syndic.form</field>
-        <field name="model">copro.syndic</field>
+    <!-- Form view for Supersyndics -->
+    <record id="view_supersyndic_form" model="ir.ui.view">
+        <field name="name">supersyndic.form</field>
+        <field name="model">copro.supersyndic</field>
         <field name="type">form</field>
         <field name="arch" type="xml">
-            <form string="Syndic">
+            <form string="Super Syndics">
                 <sheet>
                     <group>
                         <field name="name"/>
                         <field name="email"/>
                         <field name="phone"/>
                         <field name="license_id"/>
-                        <!--<field name="license_type" groups="base.group_system"/>
+                        <field name="license_type" groups="base.group_system"/>
                         <field name="license_start" groups="base.group_system"/>
-                        <field name="license_end" groups="base.group_system"/>-->
-                        <field name="supersyndic_id"/>
+                        <field name="license_end" groups="base.group_system"/>
                     </group>
                 </sheet>
             </form>
