--- a/odoo/scratch/addons/copro_manager/views/syndic_views.xml
+++ b/odoo/scratch/addons/copro_manager/views/syndic_views.xml
@@ -15,6 +15,7 @@
                 <field name="license_type"/>
                 <field name="license_start"/>
                 <field name="license_end"/>
+                <field name="supersyndic_id"/>
             </list>
         </field>
     </record>
@@ -31,10 +32,11 @@
                         <field name="name"/>
                         <field name="email"/>
                         <field name="phone"/>
-                        <field name="license_id"/>  <!-- Just link to copro.license model -->
-                        <field name="license_type" groups="base.group_system"/>
+                        <field name="license_id"/>
+                        <!--<field name="license_type" groups="base.group_system"/>
                         <field name="license_start" groups="base.group_system"/>
-                        <field name="license_end" groups="base.group_system"/>
+                        <field name="license_end" groups="base.group_system"/>-->
+                        <field name="supersyndic_id"/>
                     </group>
                 </sheet>
             </form>
