--- a/odoo/odoo/addons/copro_manager/views/coproprietaire_views.xml
+++ b/odoo/odoo/addons/copro_manager/views/coproprietaire_views.xml
@@ -12,6 +12,8 @@
                 <field name="email"/>
                 <field name="phone"/>
                 <field name="address"/>
+                <field name="residence_id"/>
+                <field name="apartment_id"/>
                 <field name="supersyndic_id"/>
                 <field name="syndic_id"/>
             </list>
@@ -31,6 +33,8 @@
                         <field name="email"/>
                         <field name="phone"/>
                         <field name="address"/>
+                        <field name="residence_id"/>
+                        <field name="apartment_id"/>
                         <field name="supersyndic_id"/>
                         <field name="syndic_id"/>
                     </group>
